--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 music/bgm.wav filter=lfs diff=lfs merge=lfs -text
 dist/2D[[:space:]]Minecraft.exe filter=lfs diff=lfs merge=lfs -text
+build/2D[[:space:]]Minecraft/2D[[:space:]]Minecraft.pkg filter=lfs diff=lfs merge=lfs -text
